--- a/includes/header.html
+++ b/includes/header.html
@@ -10,9 +10,9 @@
             </div>
             <div class="navbar-collapse collapse move-me">
                 <ul class="nav navbar-nav navbar-right set-links">
-                    <li><a href="index.php" class="active-menu-item">HOME</a></li>
-                     <li><a href="about.php">ABOUT</a></li>
-                     <li><a href="typewriters.php">TYPEWRITERS</a></li>
+                    <li><a href="index.html" class="active-menu-item">HOME</a></li>
+                     <li><a href="about.html">ABOUT</a></li>
+                     <li><a href="typewriters.html">TYPEWRITERS</a></li>
                 </ul>
             </div>
 
