--- a/includes/footer.html
+++ b/includes/footer.html
@@ -4,14 +4,7 @@
 <div class="col-md-4">
    <h4>ABOUT COMPANY</h4>
     <p style="padding-right:50px;">
-        Nunc at viverra risus. 
-        In euismod quam ac dictum varius.
-         Nunc at viverra risus. 
-        In euismod quam ac dictum varius.
-         Nunc at viverra risus. 
-        In euismod quam ac dictum varius.
-         Nunc at viverra risus. 
-         Nunc at viverra risus. <a href="about.html">more..</a>
+        This is a test. <a href="about.html">more..</a>
     </p>
 </div>
                 <div class="col-md-4">
