--- a/includes/header.html
+++ b/includes/header.html
@@ -10,7 +10,7 @@
             </div>
             <div class="navbar-collapse collapse move-me">
                 <ul class="nav navbar-nav navbar-right set-links">
-                    <li><a href="index.html" class="active-menu-item">HOME</a></li>
+                    <li><a href="index.html">HOME</a></li>
                      <li><a href="about.html">ABOUT</a></li>
                      <li><a href="typewriters.html">TYPEWRITERS</a></li>
                 </ul>
