Joke Error Pages

--- a/includes/footer.html
+++ b/includes/footer.html
@@ -20,19 +20,15 @@
                 <div class="col-md-4">
       <h4>SOCIAL LINKS</h4>
                     <div class="social-links">
-
-                    
-                    <a href="#" > <i class="fa fa-facebook fa-2x" ></i></a>
-                         <a href="#" > <i class="fa fa-twitter fa-2x" ></i></a>
-                         <a href="#" > <i class="fa fa-linkedin fa-2x" ></i></a>
-                         <a href="#" > <i class="fa fa-google-plus fa-2x" ></i></a>
-                         <a href="#" > <i class="fa fa-github fa-2x" ></i></a>
-                         <a href="#" > <i class="fa fa-digg fa-2x" ></i></a>
-                         <a href="#" > <i class="fa fa-dropbox fa-2x" ></i></a>
+						<a href="#" > <i class="fa fa-facebook fa-2x" ></i></a>
+                        <a href="#" > <i class="fa fa-twitter fa-2x" ></i></a>
+                        <a href="#" > <i class="fa fa-google-plus fa-2x" ></i></a>
+                        <a href="#" > <i class="fa fa-github fa-2x" ></i></a>
+                        <a href="#" > <i class="fa fa-digg fa-2x" ></i></a>
+                        <a href="#" > <i class="fa fa-dropbox fa-2x" ></i></a>
                    </div>
 
 </div>
-               
             </div>
                
         </div>
@@ -42,7 +38,7 @@
          <div class="container">
         <div class="row">
 <div class="col-md-12 set-foot" >
-    &copy 2014 your domain | All rights reserved | Design by : <a href="http://www.binarytheme.com" target="_blank" style="color:#7C7C7C;">binarytheme.com</a> 
+    &copy 2016 DERSCHE.id | All rights reserved | Original Template by : <a href="http://www.binarytheme.com" target="_blank" style="color:#7C7C7C;">binarytheme.com</a> 
 </div>
             </div>
                    </div>
