--- a/includes/header.html
+++ b/includes/header.html
@@ -10,9 +10,9 @@
             </div>
             <div class="navbar-collapse collapse move-me">
                 <ul class="nav navbar-nav navbar-right set-links">
-                    <li><a href="index.html">HOME</a></li>
-                     <li><a href="about.html">ABOUT</a></li>
-                     <li><a href="typewriters.html">TYPEWRITERS</a></li>
+                    <li><a href="http://www.dersche.id/index.html">HOME</a></li>
+                     <li><a href="http://www.dersche.id/about.html">ABOUT</a></li>
+                     <li><a href="http://www.dersche.id/typewriters.html">TYPEWRITERS</a></li>
                 </ul>
             </div>
         </div>
