--- a/includes/footer.html
+++ b/includes/footer.html
@@ -4,7 +4,7 @@
 <div class="col-md-4">
    <h4>ABOUT COMPANY</h4>
     <p style="padding-right:50px;">
-        This is a test. <a href="about.html">more..</a>
+        This is a test. <a href="about.html"><h6> more..</h6></a>
     </p>
 </div>
                 <div class="col-md-4">
@@ -21,10 +21,8 @@
       <h4>SOCIAL LINKS</h4>
                     <div class="social-links">
 						<a href="#" > <i class="fa fa-facebook fa-2x" ></i></a>
-                        <a href="#" > <i class="fa fa-twitter fa-2x" ></i></a>
                         <a href="#" > <i class="fa fa-google-plus fa-2x" ></i></a>
-                        <a href="#" > <i class="fa fa-github fa-2x" ></i></a>
-                        <a href="#" > <i class="fa fa-digg fa-2x" ></i></a>
+                        <a href="https://github.com/tiideinmaar" > <i class="fa fa-github fa-2x" ></i></a>
                         <a href="#" > <i class="fa fa-dropbox fa-2x" ></i></a>
                    </div>
 
@@ -46,8 +44,8 @@
      <!-- COPY TEXT SECTION END-->
     <!-- JAVASCRIPT FILES PLACED AT THE BOTTOM TO REDUCE THE LOADING TIME  -->
     <!-- CORE JQUERY  -->
-    <script src="assets/js/jquery-1.11.1.js"></script>
+    <script src="http://www.dersche.id/assets/js/jquery-1.11.1.js"></script>
     <!-- BOOTSTRAP SCRIPTS  -->
-    <script src="assets/js/bootstrap.js"></script>
+    <script src="http://www.dersche.id/assets/js/bootstrap.js"></script>
     <!-- CUSTOM SCRIPTS  -->
-    <script src="assets/js/custom.js"></script>
+    <script src="http://www.dersche.id/assets/js/custom.js"></script>
