test new typewriter header

--- a/includes/typewriterHeader.html
+++ b/includes/typewriterHeader.html
@@ -1,15 +1,7 @@
 	<div class="navbar navbar-inverse navbar-fixed-top " >
         <div class="container">
-            <div class="navbar-header">
-                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                </button>
-                <a class="navbar-brand" href="#" ><strong style=""></strong> DERSCHE.id <small>Family Website</small></a>
-            </div>
             <div class="navbar-collapse collapse move-me">
-                <ul class="nav navbar-nav navbar-right set-links">
+                <ul class="nav navbar-nav navbar-center set-links">
                     <li><a href="http://www.dersche.id/index.html">HOME</a></li>
                      <li><a href="http://www.dersche.id/about.html">ABOUT</a></li>
                      <li><a href="http://www.dersche.id/typewriters.html">TYPEWRITERS</a></li>
