--- a/includes/header.html
+++ b/includes/header.html
@@ -12,7 +12,7 @@
                 <ul class="nav navbar-nav navbar-right set-links">
                     <li><a href="http://www.dersche.id/index.html">HOME</a></li>
                      <li><a href="http://www.dersche.id/about.html">ABOUT</a></li>
-                     <li><a href="http://www.dersche.id/typewriters.html">TYPEWRITERS</a></li>
+                     <li><a href="http://www.dersche.id/typewriterLanding.html">TYPEWRITERS</a></li>
                 </ul>
             </div>
         </div>
