--- a/includes/header.html
+++ b/includes/header.html
@@ -11,8 +11,9 @@
             <div class="navbar-collapse collapse move-me">
                 <ul class="nav navbar-nav navbar-right set-links">
                     <li><a href="http://www.dersche.id/index.html">HOME</a></li>
-                     <li><a href="http://www.dersche.id/about.html">ABOUT</a></li>
-                     <li><a href="http://www.dersche.id/typewriterLanding.html">TYPEWRITERS</a></li>
+					<li><a href="http://www.dersche.id/about.html">ABOUT</a></li>
+					<li><a href="http://www.dersche.id/typewriterLanding.html">TYPEWRITERS</a></li>
+					<li><a href="http://www.dersche.id/otherLanding.html">OTHER PROJECTS</a></li>
                 </ul>
             </div>
         </div>
