--- a/includes/header.html
+++ b/includes/header.html
@@ -13,6 +13,7 @@
                     <li><a href="http://www.dersche.id/index.html">HOME</a></li>
 					<li><a href="http://www.dersche.id/about.html">ABOUT</a></li>
 					<li><a href="http://www.dersche.id/typewriterLanding.html">TYPEWRITERS</a></li>
+					<li><a href="http://www.dersche.id/recordLanding.html">RECORDS</a></li>
 					<li><a href="http://www.dersche.id/otherLanding.html">OTHER PROJECTS</a></li>
                 </ul>
             </div>
