--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -266,7 +266,7 @@ padding: 5px;
    PAGE HEADLINE STYLES
  ============================================================ */
 .headline-sec {
-      background: url(../img/header.jpg) no-repeat center center;
+      background-color: rgba(192, 192, 192, 1) no-repeat center center;
 padding: 0;
 -webkit-background-size: cover;
 background-size: cover;
