--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -27,6 +27,7 @@ section {
     max-width:250px;
 }
 h3 {
+	color: rgb(47,79,79);
     padding:15px 5px;
     font-weight:900;
     text-transform:uppercase;
