Add Corona Page, JS

--- a/includes/typewriterHeader.html
+++ b/includes/typewriterHeader.html
@@ -14,6 +14,7 @@
                     <li><a href="http://www.dersche.id/typewriterCollection.html">Current Collection</a></li>
 					<li><a href="http://www.dersche.id/typewriterWishList.html">Wish List</a></li>
 					<li><a href="http://www.dersche.id/typewriterOtherInfo.html">Other Information</a></li>
+					<li><a href="http://www.dersche.id/Coronas.html">The Corona Page</a></li>
                 </ul>
             </div>
         </div>
