--- a/includes/typewriterHeader.html
+++ b/includes/typewriterHeader.html
@@ -1,4 +1,4 @@
-	<div class="navbar navbar-inverse navbar-fixed-top " >
+	<div class="navbar navbar-inverse " >
         <div class="container">
             <div class="navbar-header">
                 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
@@ -19,8 +19,3 @@
             </div>
         </div>
     </div>
-		<br>
-		<br>
-		<br>
-		<br>
-		<br>
