--- a/includes/typewriterHeader.html
+++ b/includes/typewriterHeader.html
@@ -1,4 +1,5 @@
-	<div class="container">
+	<div class="navbar navbar-inverse " >
+        <div class="container">
             <div class="navbar-header">
                 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
                     <span class="icon-bar"></span>
@@ -17,3 +18,4 @@
                 </ul>
             </div>
         </div>
+    </div>
