--- a/includes/footer.html
+++ b/includes/footer.html
@@ -2,33 +2,22 @@
         <div class="container">
             <div class="row">
 <div class="col-md-4">
-   <h4>ABOUT COMPANY</h4>
+   <h4>ABOUT ME</h4>
     <p style="padding-right:50px;">
         This is a test. <a href="about.html"><h6> more..</h6></a>
     </p>
 </div>
-                <div class="col-md-4">
-       <h4>PHYSICAL LOCATION </h4>
-                    <h5>345/DC, New York State,</h5>
-                     <h5>The Lane Tower Road,</h5>
-                    <h5>United States-201-900-590.</h5>
-                    <br />
-                    <h5><strong>Email:</strong> info@domain.com</h5>
-                      <h5><strong>Call:</strong> +1-908-78-55-5555</h5>
-                   
-</div>
-                <div class="col-md-4">
+<div class="col-md-4">
       <h4>SOCIAL LINKS</h4>
                     <div class="social-links">
-						<a href="#" > <i class="fa fa-facebook fa-2x" ></i></a>
-                        <a href="#" > <i class="fa fa-google-plus fa-2x" ></i></a>
+						<!--<a href="#" > <i class="fa fa-facebook fa-2x" ></i></a>-->
                         <a href="https://github.com/tiideinmaar" > <i class="fa fa-github fa-2x" ></i></a>
-                        <a href="#" > <i class="fa fa-dropbox fa-2x" ></i></a>
+                        <!--<a href="#" > <i class="fa fa-dropbox fa-2x" ></i></a>-->
                    </div>
 
 </div>
             </div>
-               
+
         </div>
     </section>
      <!--FOOTER SECTION END-->
@@ -36,7 +25,7 @@
          <div class="container">
         <div class="row">
 <div class="col-md-12 set-foot" >
-    &copy 2016 DERSCHE.id | All rights reserved | Original Template by : <a href="http://www.binarytheme.com" target="_blank" style="color:#7C7C7C;">binarytheme.com</a> 
+    &copy 2018 Mac Derscheid | All rights reserved | Original Template by <a href="http://www.binarytheme.com" target="_blank" style="color:#7C7C7C;">binarytheme.com</a>
 </div>
             </div>
                    </div>
