--- a/includes/typewriterHeader.html
+++ b/includes/typewriterHeader.html
@@ -5,7 +5,7 @@
 			<span class="icon-bar"></span>
 			<span class="icon-bar"></span>
 		</button>
-		<a class="navbar-brand" href="http://www.dersche.id/index.html" ><strong style=""></strong> DERSCHE.id <small>Typewriter Page</small></a>
+		<a class="navbar-brand" href="http://www.dersche.id/typewriterLanding" ><strong style=""></strong> DERSCHE.id <small>Typewriter Page</small></a>
 	</div>
 	<div class="navbar-collapse collapse move-me">
 		<ul class="nav navbar-nav navbar-right set-links">
@@ -14,6 +14,7 @@
 			<li><a href="http://www.dersche.id/typewriterWishList.html">Wish List</a></li>
 			<li><a href="http://www.dersche.id/typewriterOtherInfo.html">Other Information</a></li>
 			<li><a href="http://www.dersche.id/Coronas.html">The Corona Page</a></li>
+			<li><a href="http://www.dersche.id/">Home</a></li>
 		</ul>
 	</div>
 </div>
