update homepage and header

--- a/includes/header.html
+++ b/includes/header.html
@@ -9,11 +9,11 @@
 	</div>
 	<div class="navbar-collapse collapse move-me">
 		<ul class="nav navbar-nav navbar-right set-links">
-			<li><a href="http://www.dersche.id/index.html">HOME</a></li>
-			<li><a href="http://www.dersche.id/about.html">ABOUT</a></li>
-			<li><a href="http://www.dersche.id/typewriterLanding.html">TYPEWRITERS</a></li>
-			<li><a href="http://www.dersche.id/recordLanding.html">RECORDS</a></li>
-			<li><a href="http://www.dersche.id/otherLanding.html">OTHER PROJECTS</a></li>
+			<li><a href="http://www.dersche.id/index.html">Home</a></li>
+			<li><a href="http://www.dersche.id/about.html">About</a></li>
+			<li><a href="http://www.dersche.id/typewriterLanding.html">Typewriters</a></li>
+			<li><a href="http://www.dersche.id/recordLanding.html">Records</a></li>
+			<li><a href="http://www.dersche.id/otherLanding.html">Other Projects</a></li>
 		</ul>
 	</div>
 </div>
