--- a/includes/footer.html
+++ b/includes/footer.html
@@ -4,8 +4,10 @@
       <div class="col-md-4">
         <h4>ABOUT ME</h4>
         <p style="padding-right:50px;">
-        This is a test. <a href="about.html"><h6> more..</h6></a>
+          This is a test. <a href="about.html"><h6> more..</h6></a>
         </p>
+      </div>
+      <div class="col-md-4">
       </div>
       <div class="col-md-4">
         <h4>SOCIAL LINKS</h4>
