add images, update stuff

--- a/includes/footer.html
+++ b/includes/footer.html
@@ -13,7 +13,7 @@
         <h4>SOCIAL LINKS</h4>
         <div class="social-links">
           <!--<a href="#" > <i class="fa fa-facebook fa-2x" ></i></a>-->
-          <a href="https://github.com/tiideinmaar" > <i class="fa fa-github fa-2x" ></i></a>
+          <a href="https://github.com/tiideinmaar" target="_blank"> <i class="fa fa-github fa-2x" ></i></a>
           <!--<a href="#" > <i class="fa fa-dropbox fa-2x" ></i></a>-->
         </div>
       </div>
