--- a/includes/header.html
+++ b/includes/header.html
@@ -11,7 +11,7 @@
 		<ul class="nav navbar-nav navbar-right set-links">
 			<li><a href="http://www.dersche.id/index.html">Home</a></li>
 			<li><a href="http://www.dersche.id/about.html">About</a></li>
-			<li><a href="http://www.dersche.id/typewriterLanding.html">Typewriters</a></li>
+			<li><a href="http://www.dersche.id/TypewriterLanding.html">Typewriters</a></li>
 			<li><a href="http://www.dersche.id/recordLanding.html">Records</a></li>
 			<li><a href="http://www.dersche.id/otherLanding.html">Other Projects</a></li>
 		</ul>
