--- a/includes/typewriterHeader.html
+++ b/includes/typewriterHeader.html
@@ -5,14 +5,14 @@
 			<span class="icon-bar"></span>
 			<span class="icon-bar"></span>
 		</button>
-		<a class="navbar-brand" href="http://www.dersche.id/typewriterLanding" ><strong style=""></strong> DERSCHE.id <small>     Typewriter Page</small></a>
+		<a class="navbar-brand" href="http://www.dersche.id/TypewriterLanding" ><strong style=""></strong> DERSCHE.id <small>     Typewriter Page</small></a>
 	</div>
 	<div class="navbar-collapse collapse move-me">
 		<ul class="nav navbar-nav navbar-right set-links">
 			<li><a href="http://www.dersche.id/typewriterCollection.html">Current Collection</a></li>
+			<li><a href="http://www.dersche.id/coronas.html">The Corona Page</a></li>
 			<li><a href="http://www.dersche.id/typewriterWishList.html">Wish List</a></li>
 			<li><a href="http://www.dersche.id/typewriterOtherInfo.html">Other Information</a></li>
-			<li><a href="http://www.dersche.id/Coronas.html">The Corona Page</a></li>
 			<li><a href="http://www.dersche.id/">Main Site</a></li>
 		</ul>
 	</div>
