--- a/includes/header.html
+++ b/includes/header.html
@@ -5,7 +5,7 @@
 			<span class="icon-bar"></span>
 			<span class="icon-bar"></span>
 		</button>
-		<a class="navbar-brand" href="http://dersche.id/" ><strong style=""></strong> DERSCHE.id <small>Family Website</small></a>
+		<a class="navbar-brand" href="http://dersche.id/" ><strong style=""></strong> DERSCHE.id <small></small></a>
 	</div>
 	<div class="navbar-collapse collapse move-me">
 		<ul class="nav navbar-nav navbar-right set-links">
