update headers and footer

--- a/includes/typewriterHeader.html
+++ b/includes/typewriterHeader.html
@@ -9,11 +9,11 @@
 	</div>
 	<div class="navbar-collapse collapse move-me">
 		<ul class="nav navbar-nav navbar-right set-links">
-			<li><a href="http://www.dersche.id/typewriterCollection.html">Current Collection</a></li>
-			<li><a href="http://www.dersche.id/coronas.html">The Corona Page</a></li>
-			<li><a href="http://www.dersche.id/typewriterWishList.html">Wish List</a></li>
-			<li><a href="http://www.dersche.id/typewriterOtherInfo.html">Other Information</a></li>
-			<li><a href="http://www.dersche.id/">Main Site</a></li>
+			<li><a href="/typewriterCollection.html">Current Collection</a></li>
+			<li><a href="/coronas.html">The Corona Page</a></li>
+			<li><a href="/typewriterWishList.html">Wish List</a></li>
+			<li><a href="/typewriterOtherInfo.html">Other Information</a></li>
+			<li><a href="../">Main Site</a></li>
 		</ul>
 	</div>
 </div>
