--- a/includes/typewriterHeader.html
+++ b/includes/typewriterHeader.html
@@ -5,7 +5,7 @@
 			<span class="icon-bar"></span>
 			<span class="icon-bar"></span>
 		</button>
-		<a class="navbar-brand" href="http://www.dersche.id/TypewriterLanding" ><strong style=""></strong> DERSCHE.id <small>     Typewriter Page</small></a>
+		<a class="navbar-brand" href="/TypewriterLanding" ><strong style=""></strong> DERSCHE.id <small>     Typewriter Page</small></a>
 	</div>
 	<div class="navbar-collapse collapse move-me">
 		<ul class="nav navbar-nav navbar-right set-links">
